Tue Dec  4 19:10:22 2001  Steve Huston  <shuston@riverace.com>

        * ace/config-sunos5.6.h: Removed the setting of _POSIX_C_SOURCE to
          199309L and __EXTENSIONS__. They aren't needed to pick up shm_open
          as previously believed, and they interfere with availability of
          some Solaris/C9x functions.

Tue Dec  4 14:47:39 2001  Steve Huston  <shuston@riverace.com>

        * ace/OS.i (gethostbyaddr): Moved this up before getipnodebyaddr()
          to avoid a call to gethostbyaddr() before it's been seen
          inlined. Thanks to Bala for reporting this.

Tue Dec  4 13:52:44 2001  Steve Huston  <shuston@riverace.com>

        * tests/Date_Time_Test.cpp: Add a test for the microseconds part.

Tue Dec  4 09:27:21 2001  Ossama Othman  <ossama@uci.edu>

	* ace/OS.h:

	  Reverted the change that added group write permissions to the
	  default file and directory permissions.  Doug correctly points
	  out that this introduces a security hole.  Users who need less
	  restrictive permissions can redefine these macros in their
	  config.h header.

Tue Dec  4 10:07:31 2001  Steve Huston  <shuston@riverace.com>

        * bin/auto_compile: Add an optional 6th command line arg that is
          the module to check out from CVS. Defaults to ACE_wrappers so
          it works the same as it used to without the argument.

Tue Dec  4 06:59:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* performance-tests/Server_Concurrency/Leader_Follower/RT_CORBA_Leader_Follower.cpp: 
	* performance-tests/Server_Concurrency/Leader_Follower/RT_CORBA_Leader_Follower.h:
	* performance-tests/Server_Concurrency/Queue_Based_Workers/RT_CORBA_Workers.h:
	* performance-tests/Server_Concurrency/Queue_Based_Workers/RT_CORBA_Workers.cpp: 
	   
	  New tests for measuring the throughput of two different server
	  concurrency architectures.  The idea is to make it simpler than
	  what is already there and hence the tests. The old tests were a